# cc

./: LICENSE  Makefile  README.md  clt.go  go.mod  go.sum  mixer.go  opts.go
cli/: command.go  command_unix.go  command_windows.go  doc.go  err.go  lp_unix.go  lp_windows.go  parser.go  parser_windows.go
cmd/: BUILD.bazel  main.go
cmd/flags/: BUILD.bazel  completion.go  config.go  daemon.go  dynamic.go  exec.go  install.go  root.go
command/: BUILD.bazel  cobra.go  command.go  command_test.go  doc.go  file.go  file_test.go  repo.go  repo_test.go  source.go
config/: BUILD.bazel  config.go  constant.go  flags.go  persisten.go  runtime.go
daemon/: BUILD.bazel  daemon.go
daemon/example/async/: BUILD.bazel  main.go
design/: schemas.md
errs/: BUILD.bazel  code.go  errs.go
event/: BUILD.bazel  event.go  event_test.go
exit/: graceful.go
flags/: completion.go  config.go  daemon.go  dynamic.go  exec.go  install.go  root.go
helper/: BUILD.bazel  compose.go  doc.go  file.go  help.go  help_test.go
linker/: BUILD.bazel  linker.go  linker_test.go
log/: discard.go  log.go
mirror/: BUILD.bazel  mirror.go
pkg/daemon/: daemon.go
pkg/daemon/example/async/: main.go
pkg/exit/: BUILD.bazel  exit.go  graceful.go  graceful_test.go
pkg/git/: BUILD.bazel  doc.go  operation.go
pkg/helper/: helper.go  markdown.go
pkg/linker/: linker.go  linker_test.go
pkg/option/: BUILD.bazel  option.go
pkg/path/: path.go
plugin/: ga.go  ga_schema.go  ga_schema_test.go  plugin.go  tcli.go  tcli_schema.go
plugin-bak/: ga.go  ga_schema.go  ga_schema_test.go  plugin.go  tcli.go  tcli_schema.go
plugin-bak/schemas/: plugin.go  yaml_plugin.go
plugin/schema/: plugin.go  plugin.proto
plugin/schemas/: plugin.go  plugin.proto  yaml_plugin.go
repo/: BUILD.bazel  repo.go  repo_test.go
resource/: archiver.go  download.go  resource.go  schema.go
scripts/: t2.ps1  t2.sh
tc/: BUILD.bazel  config.go  daemon.go  t2.go  update.go
tools/git/: git.go
