load("//tools/build_defs/go:defs.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "tencent2/tools/dev_tools/t2cli/tc/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/dev_tools/t2cli/exit:go_default_library",
        "//tools/dev_tools/t2cli/report/data:go_default_library",
        "//tools/dev_tools/t2cli/tc/cmd/flags",
        "//tools/dev_tools/t2cli/tc/internal/errs",
        "//tools/dev_tools/t2cli/tc/internal/ioc",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:private"],
)
