load("//tools/build_defs/go:defs.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "constant.go",
        "flags.go",
        "runtime.go",
    ],
    importpath = "github.com/blurooo/cc/config",
    visibility = ["//:__subpackages__"],
    x_defs = {"Version": "{STABLE_VERSION}"},
    deps = [
        "//tools/dev_tools/t2cli/common/cfile:go_default_library",
        "//tools/dev_tools/t2cli/report:go_default_library",
        "//tools/dev_tools/t2cli/tc/internal/errs",
        "//tools/dev_tools/t2cli/tc/internal/ioc",
        "//tools/dev_tools/t2cli/tc/internal/pkg/log",
    ],
)
