load("//tools/build_defs/go:defs.bzl", "go_library", "go_test")

go_library(
    name = "event",
    srcs = ["event.go"],
    importpath = "github.com/blurooo/cc/event",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "event_test",
    srcs = ["event_test.go"],
    embed = [":event"],
)
