load("//tools/build_defs/go:defs.bzl", "go_library", "go_test")

go_library(
    name = "helper",
    srcs = [
        "compose.go",
        "doc.go",
        "file.go",
        "help.go",
    ],
    importpath = "github.com/blurooo/cc/helper",
    visibility = ["//:__subpackages__"],
    deps = [
        "//tools/dev_tools/t2cli/common/cfile:go_default_library",
        "//tools/dev_tools/t2cli/tc/internal/ioc",
        "//tools/dev_tools/t2cli/utils/cli:go_default_library",
        "@com_github_charmbracelet_glamour//:glamour",
    ],
)

go_test(
    name = "helper_test",
    srcs = ["help_test.go"],
    embed = [":helper"],
)
