load("//tools/build_defs/go:defs.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = ["repo.go"],
    importpath = "github.com/blurooo/cc/repo",
    visibility = ["//:__subpackages__"],
    deps = [
        "//tools/dev_tools/t2cli/common/cfile:go_default_library",
        "//tools/dev_tools/t2cli/tc/internal/config",
        "//tools/dev_tools/t2cli/tc/internal/pkg/git",
    ],
)

go_test(
    name = "repo_test",
    srcs = ["repo_test.go"],
    embed = [":repo"],
)
