load("//tools/build_defs/go:defs.bzl", "go_library")

go_library(
    name = "t2",
    srcs = [
        "config.go",
        "daemon.go",
        "tc.go",
        "update.go",
    ],
    importpath = "github.com/blurooo/cc/tc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//tools/dev_tools/t2cli/common/cfile:go_default_library",
        "//tools/dev_tools/t2cli/report:go_default_library",
        "//tools/dev_tools/t2cli/tc/internal/command",
        "//tools/dev_tools/t2cli/tc/internal/config",
        "//tools/dev_tools/t2cli/tc/internal/ioc",
        "//tools/dev_tools/t2cli/tc/internal/linker",
        "//tools/dev_tools/t2cli/tc/internal/mirror",
        "//tools/dev_tools/t2cli/tc/internal/plugin",
        "//tools/dev_tools/t2cli/tc/internal/repo",
        "//tools/dev_tools/t2cli/tc/internal/resource",
        "//tools/dev_tools/t2cli/tc/internal/pkg/reporter",
        "//tools/dev_tools/t2cli/utils/cli:go_default_library",
        "@com_github_robfig_cron_v3//:cron",
        "@in_gopkg_ini_v1//:ini_v1",
    ],
)
