load("//tools/build_defs/go:defs.bzl", "go_library")

go_library(
    name = "flags",
    srcs = [
        "completion.go",
        "config.go",
        "daemon.go",
        "dynamic.go",
        "exec.go",
        "install.go",
        "root.go",
    ],
    importpath = "tencent2/tools/dev_tools/t2cli/tc/cmd/flags",
    visibility = ["//tools/dev_tools/t2cli/tc/cmd:__subpackages__"],
    deps = [
        "//tools/dev_tools/t2cli/common/cfile:go_default_library",
        "//tools/dev_tools/t2cli/common/flags:go_default_library",
        "//tools/dev_tools/t2cli/daemon:go_default_library",
        "//tools/dev_tools/t2cli/report:go_default_library",
        "//tools/dev_tools/t2cli/schemas/input:go_default_library",
        "//tools/dev_tools/t2cli/tc/internal/command",
        "//tools/dev_tools/t2cli/tc/internal/config",
        "//tools/dev_tools/t2cli/tc/internal/errs",
        "//tools/dev_tools/t2cli/tc/internal/helper",
        "//tools/dev_tools/t2cli/tc/internal/ioc",
        "//tools/dev_tools/t2cli/tc/internal/tc",
        "//tools/dev_tools/t2cli/tc/internal/pkg/log",
        "//tools/dev_tools/t2cli/tc/internal/pkg/reporter",
        "@com_github_spf13_cobra//:cobra",
    ],
)
