load("//tools/build_defs/go:defs.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "tencent2/tools/dev_tools/t2cli/daemon/example/async",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/dev_tools/t2cli/daemon:go_default_library",
        "//tools/dev_tools/t2cli/exit:go_default_library",
    ],
)

go_binary(
    name = "async",
    embed = [":go_default_library"],
    visibility = ["//visibility:private"],
)
